<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="jp.kztproject.rewardedtodo.ui_common.BindingUtils" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="jp.kztproject.rewardedtodo.reward.presentation.detail.RewardDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/reward_detail_background"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/description_container"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:inputType="text"
                    android:text="@={viewModel.rewardInput.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/consume_point_container">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine"
                    android:singleLine="true"
                    android:text="@={viewModel.rewardInput.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consume_point_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/probability_container">

                <EditText
                    android:id="@+id/consume_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_point"
                    android:inputType="numberDecimal"
                    android:text="@={BindingUtils.toString(viewModel.rewardInput.consumePoint)}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/probability_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/need_repeat">

                <EditText
                    android:id="@+id/consume_probability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_probability"
                    android:inputType="numberDecimal"
                    android:text="@={BindingUtils.toString(viewModel.rewardInput.probability)}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/need_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:checked="@={viewModel.rewardInput.needRepeat}"
                android:text="@string/check_repeat"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/add_button"
                app:layout_constraintLeft_toLeftOf="parent" />

            <info.hoang8f.widget.FButton
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{() -> viewModel.saveReward()}"
                android:text="@string/button_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <info.hoang8f.widget.FButton
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="@{() -> viewModel.confirmToRewardDeletion()}"
                android:text="@string/button_delete"
                android:visibility="@{viewModel.canDeleteReward ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/add_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/add_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>